--- a/paprika.css
+++ b/paprika.css
@@ -8,7 +8,7 @@ body{
 }
 
 header{
-    background-image: url(/képek/szines.jpg);
+    background-image: url(./képek/szines.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
@@ -34,7 +34,7 @@ li{
     margin-top: 10px;
     margin-right: 40px;
 
-    list-style-image: url(/képek/list_icon.png);
+    list-style-image: url(./képek/list_icon.png);
 }
 
 
